[tool.poetry]
name = "stapi-fastapi-blacksky"
version = "0.0.0"
description = "Sensor Tasking API with FastAPI for Blacksky"
authors = ["Jessica Turner <JTurner@blacksky.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
pydantic = "^2.6.4"
geojson-pydantic = "^1.0.2"
stapi-fastapi = { git = "https://github.com/stapi-spec/stapi-fastapi" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.4"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
pytest-coverage = "^0.0"
pyrfc3339 = "^1.1"
skyfield = "^1.48"
shapely = "^2.0.3"
pre-commit = "^3.7.0"

[tool.poetry.scripts]
blacksky = "stapi_fastapi_blacksky.__dev__:cli"

[tool.ruff]
extend-ignore = ["E501", "UP007", "UP034"]
line-length = 88
select = [
    "C9",
    "E",
    "F",
    "I",
    "W",
    "UP"
]

[tool.ruff.mccabe]
max-complexity = 8

[tool.coverage.report]
show_missing = true
skip_empty = true
sort = "Cover"
omit = [
    "**/*_test.py",
    "**/conftest.py",
    "stapi_fastapi/__dev__.py",
]

[tool.pytest.ini_options]
addopts="--cov=stapi_fastapi"
filterwarnings = [
    "ignore:The 'app' shortcut is now deprecated.:DeprecationWarning",
    "ignore:Pydantic serializer warnings:UserWarning",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
